# cxx20opts

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: cxx20opts.pc.in
docs/: parser.yaml
include/cxx20opts/: cxx20opts.hxx
test/: CMakeLists.txt  cxx17opts.cxx  cxx20opts.cxx
